--- a/src/main/resources/view/clustering/Classic.fxml
+++ b/src/main/resources/view/clustering/Classic.fxml
@@ -25,7 +25,7 @@
 
 <BorderPane prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ubu.lsi.ubumonitor.clustering.controller.ClusteringController">
    <top>
-      <GridPane hgap="5.0" vgap="3.0" BorderPane.alignment="CENTER">
+      <GridPane hgap="5.0" vgap="10.0" BorderPane.alignment="CENTER">
         <columnConstraints>
             <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" />
           <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="250.0" />
@@ -67,7 +67,7 @@
                      <GridPane.margin>
                         <Insets right="10.0" />
                      </GridPane.margin></CheckBox>
-                  <Spinner fx:id="spinnerReduce" editable="true" prefWidth="70.0" GridPane.columnIndex="1" />
+                  <Spinner fx:id="spinnerReduce" editable="true" prefWidth="90.0" GridPane.columnIndex="1" />
                </children>
             </GridPane>
             <Label text="%clustering.numberOfClusters" GridPane.columnIndex="4">
@@ -96,12 +96,12 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label text="Iteraciones" GridPane.halignment="RIGHT">
+                  <Label text="%clustering.iterations" GridPane.halignment="RIGHT">
                      <GridPane.margin>
                         <Insets right="10.0" />
                      </GridPane.margin>
                   </Label>
-                  <Spinner fx:id="spinnerIterations" editable="true" prefWidth="70.0" GridPane.columnIndex="1" />
+                  <Spinner fx:id="spinnerIterations" editable="true" prefWidth="90.0" GridPane.columnIndex="1" />
                </children>
             </GridPane>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="2">
@@ -141,11 +141,11 @@
    <center>
       <SplitPane dividerPositions="0.8" BorderPane.alignment="CENTER">
          <items>
-            <TabPane minWidth="-Infinity" prefWidth="800.0" tabClosingPolicy="UNAVAILABLE">
+            <TabPane minWidth="0.0" prefWidth="800.0" tabClosingPolicy="UNAVAILABLE">
               <tabs>
                 <Tab text="%clustering.2Dgraph">
                      <content>
-                        <WebView fx:id="webViewScatter" cache="true" cacheHint="SPEED" minHeight="-1.0" minWidth="600.0" prefHeight="-1.0" />
+                        <WebView fx:id="webViewScatter" cache="true" cacheHint="SPEED" minHeight="-1.0" prefHeight="-1.0" />
                      </content>
                   </Tab>
                   <Tab text="%clustering.3Dgraph">
@@ -160,7 +160,7 @@
                   </Tab>
               </tabs>
             </TabPane>
-            <TabPane maxWidth="1000.0" minWidth="-Infinity" prefWidth="300.0" tabClosingPolicy="UNAVAILABLE">
+            <TabPane maxWidth="1.7976931348623157E308" minWidth="0.0" prefWidth="300.0" tabClosingPolicy="UNAVAILABLE">
               <tabs>
                 <Tab text="%clustering.table">
                      <content>
