--- a/src/main/resources/view/ClusteringInfo.fxml
+++ b/src/main/resources/view/ClusteringInfo.fxml
@@ -33,10 +33,10 @@
    <center>
       <TableView fx:id="tableView" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <columns>
-            <TableColumn fx:id="columnType" editable="false" prefWidth="60.0" text="Type" />
+            <TableColumn fx:id="columnType" editable="false" prefWidth="60.0" text="%clustering.type" />
             <TableColumn fx:id="columnIcon" editable="false" maxWidth="30.0" minWidth="30.0" prefWidth="30.0" resizable="false" sortable="false" />
-            <TableColumn fx:id="columnItem" editable="false" text="Item" />
-            <TableColumn fx:id="columnValue" editable="false" prefWidth="20.0" text="Value" />
+            <TableColumn fx:id="columnItem" editable="false" text="%clustering.item" />
+            <TableColumn fx:id="columnValue" editable="false" prefWidth="20.0" text="%clustering.value" />
          </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
