--- a/src/main/resources/view/LauncherConfiguration.fxml
+++ b/src/main/resources/view/LauncherConfiguration.fxml
@@ -23,14 +23,16 @@
         </columnConstraints>
         <rowConstraints>
           <RowConstraints />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" />
+          <RowConstraints vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <CheckBox fx:id="checkBox" mnemonicParsing="false" text="%checkbox.checkupdatesagain" GridPane.columnSpan="2" />
-            <Label text="%label.restoreversion" GridPane.rowIndex="1" />
-            <ChoiceBox fx:id="choiceBox" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Label text="%label.restartapplication" textFill="RED" GridPane.columnSpan="2" GridPane.rowIndex="2" />
+            <CheckBox fx:id="checkBoxBetaTester" layoutX="30.0" layoutY="30.0" mnemonicParsing="false" text="%checkbox.betatester" GridPane.columnSpan="2" GridPane.rowIndex="1" />
+            <Label fx:id="label" text="%label.restoreversion" GridPane.rowIndex="2" />
+            <ChoiceBox fx:id="choiceBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label text="%label.restartapplication" textFill="RED" GridPane.columnSpan="2" GridPane.rowIndex="3" />
          </children>
          <padding>
             <Insets left="20.0" right="20.0" top="20.0" />
